--- a/DSPT5_SEAN_LS_DS_213_assignment.ipynb
+++ b/DSPT5_SEAN_LS_DS_213_assignment.ipynb
@@ -192,7 +192,7 @@
       "metadata": {
         "id": "KH5AUxVjJXow",
         "colab_type": "code",
-        "outputId": "563fbbff-6048-44b9-b78c-cd403ff77091",
+        "outputId": "a34db84b-5d02-4d1d-b8b7-d190996ff16a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
@@ -201,7 +201,7 @@
       "source": [
         "df.columns"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +220,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -229,20 +229,215 @@
       "metadata": {
         "id": "pkr6UEQYP3mE",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 445
+        },
+        "outputId": "05faf0c2-03e1-488f-84ff-f8ed4f2aa037"
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BOROUGH</th>\n",
+              "      <th>NEIGHBORHOOD</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY</th>\n",
+              "      <th>TAX_CLASS_AT_PRESENT</th>\n",
+              "      <th>BLOCK</th>\n",
+              "      <th>LOT</th>\n",
+              "      <th>EASE-MENT</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT</th>\n",
+              "      <th>ADDRESS</th>\n",
+              "      <th>APARTMENT_NUMBER</th>\n",
+              "      <th>ZIP_CODE</th>\n",
+              "      <th>RESIDENTIAL_UNITS</th>\n",
+              "      <th>COMMERCIAL_UNITS</th>\n",
+              "      <th>TOTAL_UNITS</th>\n",
+              "      <th>LAND_SQUARE_FEET</th>\n",
+              "      <th>GROSS_SQUARE_FEET</th>\n",
+              "      <th>YEAR_BUILT</th>\n",
+              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>SALE_PRICE</th>\n",
+              "      <th>SALE_DATE</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>13 CONDOS - ELEVATOR APARTMENTS</td>\n",
+              "      <td>2</td>\n",
+              "      <td>716</td>\n",
+              "      <td>1246</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>R4</td>\n",
+              "      <td>447 WEST 18TH STREET, PH12A</td>\n",
+              "      <td>PH12A</td>\n",
+              "      <td>10011.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>10,733</td>\n",
+              "      <td>1979.0</td>\n",
+              "      <td>2007.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>R4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>21 OFFICE BUILDINGS</td>\n",
+              "      <td>4</td>\n",
+              "      <td>812</td>\n",
+              "      <td>68</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>O5</td>\n",
+              "      <td>144 WEST 37TH STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10018.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>6.0</td>\n",
+              "      <td>2,962</td>\n",
+              "      <td>15435.0</td>\n",
+              "      <td>1920.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>O5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>21 OFFICE BUILDINGS</td>\n",
+              "      <td>4</td>\n",
+              "      <td>839</td>\n",
+              "      <td>69</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>O5</td>\n",
+              "      <td>40 WEST 38TH STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10018.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>7.0</td>\n",
+              "      <td>2,074</td>\n",
+              "      <td>11332.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>O5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>13 CONDOS - ELEVATOR APARTMENTS</td>\n",
+              "      <td>2</td>\n",
+              "      <td>592</td>\n",
+              "      <td>1041</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>R4</td>\n",
+              "      <td>1 SHERIDAN SQUARE, 8C</td>\n",
+              "      <td>8C</td>\n",
+              "      <td>10014.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>500.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>R4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1</td>\n",
+              "      <td>UPPER EAST SIDE (59-79)</td>\n",
+              "      <td>15 CONDOS - 2-10 UNIT RESIDENTIAL</td>\n",
+              "      <td>2C</td>\n",
+              "      <td>1379</td>\n",
+              "      <td>1402</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>R1</td>\n",
+              "      <td>20 EAST 65TH STREET, B</td>\n",
+              "      <td>B</td>\n",
+              "      <td>10065.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6406.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>R1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  BOROUGH             NEIGHBORHOOD  ... SALE_PRICE   SALE_DATE\n",
+              "0       1                    OTHER  ...          0  01/01/2019\n",
+              "1       1                    OTHER  ...          0  01/01/2019\n",
+              "2       1                    OTHER  ...          0  01/01/2019\n",
+              "3       1                    OTHER  ...          0  01/01/2019\n",
+              "4       1  UPPER EAST SIDE (59-79)  ...          0  01/01/2019\n",
+              "\n",
+              "[5 rows x 21 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "DOQh8bcsQImh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "ac8b15a3-e195-4724-ceee-65826304fed7"
       },
       "source": [
         "'''\n",
@@ -252,15 +447,28 @@
         "100 thousand and less than 2 million.\n",
         "''' "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"\\nUse a subset of the data where \\nBUILDING_CLASS_CATEGORY == '01 ONE FAMILY DWELLINGS' \\nand the sale price was more than \\n100 thousand and less than 2 million.\\n\""
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HJUwSl9tdC6J",
         "colab_type": "code",
-        "outputId": "153fd510-bc10-4b21-d852-3a1d7d8b34fc",
+        "outputId": "027159d5-65b8-4a3c-e167-fcacfea9c25a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -269,22 +477,36 @@
       "source": [
         "df['SALE_PRICE'].sample()"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "4119    2665000\n",
+              "9774    930000\n",
               "Name: SALE_PRICE, dtype: int64"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5-fBgCmjoGIg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df['SALE_DATE'] = pd.to_datetime(df['SALE_DATE'], infer_datetime_format=True)\n",
+        "df['month']=df['SALE_DATE'].dt.month"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -294,8 +516,8 @@
         "colab": {}
       },
       "source": [
-        "train = df[(df['SALE_PRICE'] > 99999) & (df['SALE_PRICE'] < 1999999)\n",
-        "(df['BUILDING_CLASS_CATEGORY'] == '01 ONE FAMILY DWELLINGS']"
+        "sub = df[(df['SALE_PRICE'] > 99999) & (df['SALE_PRICE'] < 2000000) &\n",
+        "(df['BUILDING_CLASS_CATEGORY'] == '01 ONE FAMILY DWELLINGS')]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -303,12 +525,181 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "OXsgzCFIi4xB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "84ad9d13-5aff-4cd6-f019-ea2d8f81403a"
+      },
+      "source": [
+        "####checking my work\n",
+        "sub['BUILDING_CLASS_CATEGORY'].value_counts()"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "01 ONE FAMILY DWELLINGS    3161\n",
+              "Name: BUILDING_CLASS_CATEGORY, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "zUFf9g8qbMPN",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "d42968ad-0018-463e-e1c9-d8d6a7fe62b6"
+      },
+      "source": [
+        "####checking my work\n",
+        "sub['SALE_PRICE'].describe()"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count    3.161000e+03\n",
+              "mean     6.268880e+05\n",
+              "std      2.940289e+05\n",
+              "min      1.000000e+05\n",
+              "25%      4.450000e+05\n",
+              "50%      5.650000e+05\n",
+              "75%      7.590000e+05\n",
+              "max      1.955000e+06\n",
+              "Name: SALE_PRICE, dtype: float64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hfeBo7IviGuO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "7e78d11f-78d6-4cf2-817f-d58e33898e37"
+      },
+      "source": [
+        "'''\n",
+        "Do train/test split. Use data from January — March 2019 to train. \n",
+        "Use data from April 2019 to test\n",
+        "'''"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'\\nDo train/test split. Use data from January — March 2019 to train. \\nUse data from April 2019 to test\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4kKh9W8yoXbh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 102
+        },
+        "outputId": "f2a1ba23-064c-4f13-b2ed-0b92166590a8"
+      },
+      "source": [
+        "sub.month.value_counts()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1    952\n",
+              "3    801\n",
+              "2    762\n",
+              "4    646\n",
+              "Name: month, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zyzCjRoekKYq",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "train = sub[sub.month < 4]\n",
+        "test = sub[sub.month == 4]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IGxNOVbLlY2U",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "'''\n",
+        "Do one-hot encoding of categorical features.\n",
+        "'''"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gYOgJs9Ip1CF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import category_encoders as ce\n",
+        "\n",
+        "encoder"
       ],
       "execution_count": 0,
       "outputs": []
