--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -181,6 +181,393 @@
       "metadata": {
         "id": "P3jcfxNUfjh6",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 584
+        },
+        "outputId": "331c94dd-7fe4-44ea-a5eb-f33bbfe6eaee"
+      },
+      "source": [
+        "df_subset = df[(100000 < df['SALE_PRICE']) & (df['SALE_PRICE']  < 2000000) & (df['BUILDING_CLASS_CATEGORY'] == '01 ONE FAMILY DWELLINGS')]\n",
+        "df_subset.head(10)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>BOROUGH</th>\n",
+              "      <th>NEIGHBORHOOD</th>\n",
+              "      <th>BUILDING_CLASS_CATEGORY</th>\n",
+              "      <th>TAX_CLASS_AT_PRESENT</th>\n",
+              "      <th>BLOCK</th>\n",
+              "      <th>LOT</th>\n",
+              "      <th>EASE-MENT</th>\n",
+              "      <th>BUILDING_CLASS_AT_PRESENT</th>\n",
+              "      <th>ADDRESS</th>\n",
+              "      <th>APARTMENT_NUMBER</th>\n",
+              "      <th>ZIP_CODE</th>\n",
+              "      <th>RESIDENTIAL_UNITS</th>\n",
+              "      <th>COMMERCIAL_UNITS</th>\n",
+              "      <th>TOTAL_UNITS</th>\n",
+              "      <th>LAND_SQUARE_FEET</th>\n",
+              "      <th>GROSS_SQUARE_FEET</th>\n",
+              "      <th>YEAR_BUILT</th>\n",
+              "      <th>TAX_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>BUILDING_CLASS_AT_TIME_OF_SALE</th>\n",
+              "      <th>SALE_PRICE</th>\n",
+              "      <th>SALE_DATE</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>44</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5495</td>\n",
+              "      <td>801</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A9</td>\n",
+              "      <td>4832 BAY PARKWAY</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11230.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>6,800</td>\n",
+              "      <td>1325.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A9</td>\n",
+              "      <td>550000</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>61</th>\n",
+              "      <td>4</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7918</td>\n",
+              "      <td>72</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>80-23 232ND STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11427.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4,000</td>\n",
+              "      <td>2001.0</td>\n",
+              "      <td>1940.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>200000</td>\n",
+              "      <td>01/01/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>78</th>\n",
+              "      <td>2</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4210</td>\n",
+              "      <td>19</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>1260 RHINELANDER AVE</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>10461.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>3,500</td>\n",
+              "      <td>2043.0</td>\n",
+              "      <td>1925.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>810000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>108</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5212</td>\n",
+              "      <td>69</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>469 E 25TH ST</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11226.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4,000</td>\n",
+              "      <td>2680.0</td>\n",
+              "      <td>1899.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>125000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>111</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7930</td>\n",
+              "      <td>121</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A5</td>\n",
+              "      <td>5521 WHITTY LANE</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11203.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1,710</td>\n",
+              "      <td>1872.0</td>\n",
+              "      <td>1940.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A5</td>\n",
+              "      <td>620000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>120</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>6806</td>\n",
+              "      <td>72</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>1747 EAST 23RD STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11229.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4,000</td>\n",
+              "      <td>1932.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>1150000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>121</th>\n",
+              "      <td>3</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>6761</td>\n",
+              "      <td>42</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>1582 EAST 15TH STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11230.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2,000</td>\n",
+              "      <td>1722.0</td>\n",
+              "      <td>1920.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>836500</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>132</th>\n",
+              "      <td>4</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7378</td>\n",
+              "      <td>4</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>201-08 50TH AVENUE</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11364.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>3,000</td>\n",
+              "      <td>1396.0</td>\n",
+              "      <td>1930.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A1</td>\n",
+              "      <td>955000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>137</th>\n",
+              "      <td>4</td>\n",
+              "      <td>OTHER</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2882</td>\n",
+              "      <td>16</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A5</td>\n",
+              "      <td>85-11 57 ROAD</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11373.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>1,800</td>\n",
+              "      <td>1260.0</td>\n",
+              "      <td>1935.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A5</td>\n",
+              "      <td>820000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>141</th>\n",
+              "      <td>4</td>\n",
+              "      <td>FLUSHING-NORTH</td>\n",
+              "      <td>01 ONE FAMILY DWELLINGS</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7407</td>\n",
+              "      <td>50</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>A0</td>\n",
+              "      <td>53-19 198TH STREET</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>11365.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>4,000</td>\n",
+              "      <td>1440.0</td>\n",
+              "      <td>1945.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>A0</td>\n",
+              "      <td>980000</td>\n",
+              "      <td>01/02/2019</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    BOROUGH    NEIGHBORHOOD  ... SALE_PRICE   SALE_DATE\n",
+              "44        3           OTHER  ...     550000  01/01/2019\n",
+              "61        4           OTHER  ...     200000  01/01/2019\n",
+              "78        2           OTHER  ...     810000  01/02/2019\n",
+              "108       3           OTHER  ...     125000  01/02/2019\n",
+              "111       3           OTHER  ...     620000  01/02/2019\n",
+              "120       3           OTHER  ...    1150000  01/02/2019\n",
+              "121       3           OTHER  ...     836500  01/02/2019\n",
+              "132       4           OTHER  ...     955000  01/02/2019\n",
+              "137       4           OTHER  ...     820000  01/02/2019\n",
+              "141       4  FLUSHING-NORTH  ...     980000  01/02/2019\n",
+              "\n",
+              "[10 rows x 21 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ob64QblCJYp0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 138
+        },
+        "outputId": "fbc05227-79c4-4365-c5d0-521972100bbb"
+      },
+      "source": [
+        "df_subset['SALE_DATE'] = pd.to_datetime(df_subset['SALE_DATE'], infer_datetime_format=True)\n",
+        "df_subset['SALE_DATE'].dtype"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  \"\"\"Entry point for launching an IPython kernel.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "dtype('<M8[ns]')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DK_IG61cKcDS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test = df_subset[df_subset['SALE_DATE'].dt.month == 4]\n",
+        "train = df_subset[df_subset['SALE_DATE'].dt.month != 4]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "459b1tH7Mlmk",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
