coefficients and intercept added

--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -3955,6 +3955,103 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-YLby-_Y7n6J",
+        "colab_type": "text"
+      },
+      "source": [
+        "#get model coefficient and intercept"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hukotQ8Q7r93",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cc462c05-e01b-402e-8c8a-93ac4f589ed0"
+      },
+      "source": [
+        "model.intercept_, model.coef_"
+      ],
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(485.71869002322273, array([ 389.3248959 , 2072.61011639]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SLWDnA0h7zPc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3c8095f3-5143-41a1-acc0-4d5a0f01a111"
+      },
+      "source": [
+        "beta0 = model.intercept_\n",
+        "beta1, beta2 = model.coef_\n",
+        "print(f'y={beta0} + {beta1}x1 + {beta2}x2')"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "y=485.71869002322273 + 389.32489590255824x1 + 2072.6101163851895x2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2QjZ6aJ68qG2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "3fa14290-86de-4fc0-faec-bc6e25d6513c"
+      },
+      "source": [
+        "#this is easier to read\n",
+        "print('Intercept', model.intercept_)\n",
+        "coefficients = pd.Series(model.coef_, features)\n",
+        "print(coefficients.to_string())"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Intercept 485.71869002322273\n",
+            "bedrooms      389.324896\n",
+            "bathrooms    2072.610116\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
