--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -185,7 +185,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 584
         },
-        "outputId": "1c5db50b-99b6-49dd-80f8-f7b5d465daf2"
+        "outputId": "694f8551-6df3-4c87-d38e-dd99bb469512"
       },
       "source": [
         "#First subset taken\n",
@@ -516,7 +516,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 138
         },
-        "outputId": "a901b22d-7ed1-46c6-c0b3-3aa6bb6b9633"
+        "outputId": "744d2839-9b9e-4c12-fe33-a8e10a4c7476"
       },
       "source": [
         "# Warning noted, but it still worked\n",
@@ -575,7 +575,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 233
         },
-        "outputId": "4ec4e6ae-b8a1-47a3-c6ea-d1af7ba8e1b6"
+        "outputId": "33a22d4c-46f9-4055-ca1f-b16321d2a060"
       },
       "source": [
         "train.describe(exclude='number')"
@@ -650,7 +650,7 @@
               "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>A1</td>\n",
-              "      <td>104-18 187TH STREET</td>\n",
+              "      <td>57 CHESTNUT STREET</td>\n",
               "      <td>RP.</td>\n",
               "      <td>4,000</td>\n",
               "      <td>A1</td>\n",
@@ -727,7 +727,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 104
         },
-        "outputId": "61b703c9-17ae-4e5b-ab3c-9f08604de2e0"
+        "outputId": "05dadf49-030f-4ab6-b3ab-fe1d27d41a1f"
       },
       "source": [
         "# Yeah, I kinda came all the way beack here to drop Ease-ment from here because its more efficient\n",
@@ -781,7 +781,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 202
         },
-        "outputId": "22eb318f-3f1e-41ed-ef24-a57aedb5e072"
+        "outputId": "cde88c17-5dd3-488e-c114-f33c4997bddb"
       },
       "source": [
         "X_train.head()"
@@ -949,7 +949,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 393
         },
-        "outputId": "028a8b30-5041-4dd3-81fd-4fe0e3a42fb7"
+        "outputId": "9c4ee98d-e169-4154-f878-e0e73fc391a9"
       },
       "source": [
         "X_train_enc.head(10)"
@@ -1388,7 +1388,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8d4b0dec-c3cd-4367-bbbc-0a427c764402"
+        "outputId": "58d89978-4311-4f51-9ff7-e0abe513f052"
       },
       "source": [
         "X_train_enc.shape"
@@ -1418,18 +1418,18 @@
           "base_uri": "https://localhost:8080/",
           "height": 190
         },
-        "outputId": "e8e38a8a-2996-4fa2-c41c-9cd2b4c0a4ae"
+        "outputId": "c18cc186-4453-40b6-e2c8-452d88e7fbe7"
       },
       "source": [
         "# Time to try out SelectKBest\n",
         "from sklearn.feature_selection import SelectKBest, f_regression\n",
         "\n",
-        "selector = SelectKBest(score_func= f_regression, k=15)\n",
+        "selector = SelectKBest(score_func= f_regression, k=16)\n",
         "\n",
         "X_train_kbest = selector.fit_transform(X_train_enc, y_train)\n",
         "X_test_kbest = selector.transform(X_test_enc)"
       ],
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1458,24 +1458,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "afb9b32c-2d05-43e5-8b08-a2ac86e62c6a"
+        "outputId": "ce600598-fe89-47dc-c5ce-d8fe16215a5a"
       },
       "source": [
         "X_train_kbest.shape"
       ],
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(2507, 15)"
+              "(2507, 16)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -1517,12 +1517,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 453
         },
-        "outputId": "142a8007-8e45-4dd8-b572-0a9707388b97"
+        "outputId": "04b469ae-e0f1-488f-e310-7a3c1e9d2f9f"
       },
       "source": [
         "X_train_final"
       ],
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1552,6 +1552,7 @@
               "      <th>NEIGHBORHOOD_OTHER</th>\n",
               "      <th>NEIGHBORHOOD_FLUSHING-NORTH</th>\n",
               "      <th>NEIGHBORHOOD_FOREST HILLS</th>\n",
+              "      <th>NEIGHBORHOOD_BOROUGH PARK</th>\n",
               "      <th>BLOCK</th>\n",
               "      <th>ZIP_CODE</th>\n",
               "      <th>COMMERCIAL_UNITS</th>\n",
@@ -1572,6 +1573,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>5495.0</td>\n",
               "      <td>11230.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1588,6 +1590,7 @@
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>7918.0</td>\n",
@@ -1608,6 +1611,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>4210.0</td>\n",
               "      <td>10461.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1626,6 +1630,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>5212.0</td>\n",
               "      <td>11226.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1642,6 +1647,7 @@
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>7930.0</td>\n",
@@ -1671,6 +1677,7 @@
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
+              "      <td>...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2502</th>\n",
@@ -1678,6 +1685,7 @@
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>4081.0</td>\n",
@@ -1698,6 +1706,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>2373.0</td>\n",
               "      <td>10314.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1714,6 +1723,7 @@
               "      <td>0.0</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>1132.0</td>\n",
@@ -1734,6 +1744,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>3395.0</td>\n",
               "      <td>10305.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1752,6 +1763,7 @@
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
               "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
               "      <td>11159.0</td>\n",
               "      <td>11429.0</td>\n",
               "      <td>0.0</td>\n",
@@ -1764,7 +1776,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>2507 rows × 15 columns</p>\n",
+              "<p>2507 rows × 16 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -1781,15 +1793,78 @@
               "2505        0.0  ...                                0.0\n",
               "2506        0.0  ...                                0.0\n",
               "\n",
-              "[2507 rows x 15 columns]"
+              "[2507 rows x 16 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 19
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NUeZGcqh-9rm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Creating the model with Ridge regression\n",
+        "from sklearn.linear_model import RidgeCV\n",
+        "model = RidgeCV(alphas=[0.01, 0.1, 1.0, 10.0, 100.0], normalize=True)\n",
+        "model.fit(X_train_final, y_train)\n",
+        "y_pred = model.predict(X_test_final)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_-plXwWyE0GF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8a92a8e5-4ded-4516-e441-78a7edb85c1f"
+      },
+      "source": [
+        "# And finally, testing the model's error\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "mean_absolute_error(y_pred, y_test)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "159051.30459613234"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0-V6NegfFU9E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# I have no way of knowing if that is a good result or not.\n",
+        "# CHEERS!"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
