--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -88,14 +88,10 @@
       "metadata": {
         "colab_type": "code",
         "id": "o9eSnDYhUGD7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "ed2e2f00-d1a4-4432-9e6c-05cbe9f45a2f"
+        "colab": {}
       },
       "source": [
-        "#%%capture\n",
+        "%%capture\n",
         "import sys\n",
         "\n",
         "# If you're on Colab:\n",
@@ -112,26 +108,8 @@
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: category_encoders==2.* in /usr/local/lib/python3.6/dist-packages (2.1.0)\n",
-            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.*) (0.5.1)\n",
-            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.*) (0.10.2)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.*) (1.18.1)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.*) (1.4.1)\n",
-            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.*) (0.22.2.post1)\n",
-            "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.*) (0.25.3)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders==2.*) (1.12.0)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.20.0->category_encoders==2.*) (0.14.1)\n",
-            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.*) (2.8.1)\n",
-            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.*) (2018.9)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -203,16 +181,16 @@
       "metadata": {
         "id": "F_hutXagOc_i",
         "colab_type": "code",
+        "outputId": "145f3085-4c0f-42a8-89e9-e9fcaa967792",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 445
-        },
-        "outputId": "9d956b0f-fd21-4b44-9f30-18489ea8b649"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -398,7 +376,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 25
         }
       ]
     },
@@ -421,16 +399,16 @@
       "metadata": {
         "id": "xJ6KRt6SQAUb",
         "colab_type": "code",
+        "outputId": "026ed5e9-a81c-49fd-dd2e-e1db947e8994",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 660
-        },
-        "outputId": "e6e1b52b-bedf-4f31-b6a2-a5782df9b5db"
+        }
       },
       "source": [
         "df_subset"
       ],
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,7 +745,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 27
         }
       ]
     },
@@ -776,16 +754,16 @@
       "metadata": {
         "id": "M28LWzH1QCWK",
         "colab_type": "code",
+        "outputId": "e196316e-35d1-4434-b3b9-5fa93010493a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "573f6497-e6b8-4151-c873-97bb0217b34d"
+        }
       },
       "source": [
         "df_subset['MONTH'] = pd.to_datetime(df['SALE_DATE'], infer_datetime_format=True)"
       ],
-      "execution_count": 8,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,16 +784,16 @@
       "metadata": {
         "id": "cXVt2CflQrZ-",
         "colab_type": "code",
+        "outputId": "b482b52d-9af5-4d3c-8ff3-7b45d20d206a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 660
-        },
-        "outputId": "3824a990-9c30-4d77-8a02-f52a13fd5386"
+        }
       },
       "source": [
         "df_subset"
       ],
-      "execution_count": 9,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1164,7 +1142,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 29
         }
       ]
     },
@@ -1173,16 +1151,16 @@
       "metadata": {
         "id": "Ey4KkP3SRuEk",
         "colab_type": "code",
+        "outputId": "7ce4c3a0-6005-4698-c049-ce89fe0b3094",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "509d62be-1bf1-45a6-c6ea-498dc090eebc"
+        }
       },
       "source": [
         "df_subset['MONTH'] = df_subset['MONTH'].apply(lambda x: x.month)"
       ],
-      "execution_count": 10,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -1217,16 +1195,16 @@
       "metadata": {
         "id": "ogmIuyQSSGcI",
         "colab_type": "code",
+        "outputId": "2ef64210-9549-437a-c14e-842d222d27bd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 343
-        },
-        "outputId": "474bcf0d-a7ef-4c71-af8e-a047aefc019e"
+        }
       },
       "source": [
         "train.head()"
       ],
-      "execution_count": 12,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1418,7 +1396,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 32
         }
       ]
     },
@@ -1427,16 +1405,16 @@
       "metadata": {
         "id": "Yfy81PBpTOrI",
         "colab_type": "code",
+        "outputId": "c764008e-bdc2-4ea1-adad-52fd6c43fdb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
-        },
-        "outputId": "b7ffa361-0065-4ae6-f608-fc2fcdde315e"
+        }
       },
       "source": [
         "train.describe(exclude='number')"
       ],
-      "execution_count": 13,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1506,7 +1484,7 @@
               "      <td>01 ONE FAMILY DWELLINGS</td>\n",
               "      <td>1</td>\n",
               "      <td>A1</td>\n",
-              "      <td>104-18 187TH STREET</td>\n",
+              "      <td>22-40 93RD STREET</td>\n",
               "      <td>RP.</td>\n",
               "      <td>4,000</td>\n",
               "      <td>A1</td>\n",
@@ -1542,7 +1520,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 33
         }
       ]
     },
@@ -1551,11 +1529,11 @@
       "metadata": {
         "id": "xPet1VkXVaO_",
         "colab_type": "code",
+        "outputId": "931f2267-c8e7-461c-d309-0154806db36b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "e172d423-a434-4488-81c5-cccc58c4d7e2"
+        }
       },
       "source": [
         "#removing features that have high cardinality\n",
@@ -1567,7 +1545,7 @@
         "features = train.columns.drop([target] + high_cardinality + ['APARTMENT_NUMBER', 'MONTH', 'EASE-MENT'])\n",
         "features"
       ],
-      "execution_count": 14,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1584,7 +1562,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 34
         }
       ]
     },
@@ -1633,6 +1611,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "\n",
+        "#borrowing from lecture\n",
         "mae_list = []\n",
         "for k in range(1, len(X_train.columns) + 1):\n",
         "    print(f'{k} features')\n",
@@ -1657,30 +1636,30 @@
       "metadata": {
         "id": "JwegidpIcev7",
         "colab_type": "code",
+        "outputId": "a2bb4d55-dfe1-4584-e3dc-6e1c7156cd32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4c42be96-002f-4a51-aea1-c857e5d1e7cf"
+        }
       },
       "source": [
         "#no idea why this isnt graphing but it appears that 28 features is the most accurate\n",
         "import matplotlib.pyplot as plt\n",
         "plt.scatter(range(1, len(X_train.columns) + 1), mae_list)"
       ],
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7fd8c8791d68>"
+              "<matplotlib.collections.PathCollection at 0x7ffa8c20ddd8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 38
         }
       ]
     },
@@ -1688,6 +1667,81 @@
       "cell_type": "code",
       "metadata": {
         "id": "VoTcfZFDqeSe",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "b7506d8b-c68c-4b21-91df-c7517639f1d5"
+      },
+      "source": [
+        "from sklearn.linear_model import Ridge\n",
+        "from sklearn.metrics import mean_absolute_error\n",
+        "\n",
+        "for alpha in [0,.1, .2, .5, .7, .9, 1]:\n",
+        "    ridge = Ridge(alpha=alpha, normalize=True)\n",
+        "    ridge.fit(X_train, y_train)\n",
+        "\n",
+        "    y_pred = ridge.predict(X_test)\n",
+        "\n",
+        "    mae = mean_absolute_error(y_test, y_pred)\n",
+        "    print(f'alpha={alpha}:  {mae}')\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "alpha=0:  4114270494670679.5\n",
+            "alpha=0.1:  157540.2555685431\n",
+            "alpha=0.2:  158725.23579037274\n",
+            "alpha=0.5:  164066.92389136986\n",
+            "alpha=0.7:  167524.3165772537\n",
+            "alpha=0.9:  170759.08040298262\n",
+            "alpha=1:  172237.844120919\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WMctfmUMNe5-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "0164cb25-22c9-4db3-fb82-f08fd01fa2c3"
+      },
+      "source": [
+        "for alpha in [0,.1, .2, .5, .7, .9, 1]:\n",
+        "    print(alpha)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "0.1\n",
+            "0.2\n",
+            "0.5\n",
+            "0.7\n",
+            "0.9\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d6-tNct5N6ie",
         "colab_type": "code",
         "colab": {}
       },
