--- a/DSPT5_SEAN_LS_DS_213_assignment.ipynb
+++ b/DSPT5_SEAN_LS_DS_213_assignment.ipynb
@@ -2683,75 +2683,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 867
+          "height": 34
         },
-        "outputId": "e4a3a8aa-e9ae-4989-87d7-7a00a1a8f36a"
+        "outputId": "11c9962c-02c4-43fa-8b06-c204fcf480c4"
       },
       "source": [
-        "mae_list"
+        "len(mae_list)"
       ],
-      "execution_count": 129,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[184081.5086394867,\n",
-              " 183056.54800684378,\n",
-              " 183056.5480068438,\n",
-              " 174397.21247744613,\n",
-              " 175434.0713823798,\n",
-              " 173554.5733505742,\n",
-              " 174060.8754142468,\n",
-              " 173865.1491936397,\n",
-              " 169354.56942246613,\n",
-              " 169010.46612721478,\n",
-              " 169875.1641637455,\n",
-              " 162210.7953029867,\n",
-              " 163881.13946928203,\n",
-              " 163161.88949321024,\n",
-              " 163163.00947187218,\n",
-              " 162898.36283556503,\n",
-              " 162898.36283555155,\n",
-              " 162711.40871478477,\n",
-              " 162711.40871482433,\n",
-              " 160445.50266107678,\n",
-              " 160445.50266114366,\n",
-              " 160445.50266107422,\n",
-              " 160524.39557438705,\n",
-              " 160091.476796517,\n",
-              " 159993.72094344927,\n",
-              " 159950.5264967255,\n",
-              " 160075.73429548967,\n",
-              " 160033.3235278239,\n",
-              " 160939.6912908022,\n",
-              " 161003.90731611467,\n",
-              " 161003.90731613536,\n",
-              " 160540.8731426324,\n",
-              " 160519.82583970972,\n",
-              " 160531.01077991104,\n",
-              " 160196.38382442232,\n",
-              " 160196.3838244119,\n",
-              " 159424.74012092917,\n",
-              " 159483.3787449948,\n",
-              " 160530.1604941176,\n",
-              " 160524.70101745104,\n",
-              " 160524.7010174515,\n",
-              " 160532.46828925115,\n",
-              " 160857.7352941081,\n",
-              " 160857.73529410543,\n",
-              " 160816.96475440226,\n",
-              " 160812.77300069443,\n",
-              " 160812.66747291022,\n",
-              " 161035.46546052632,\n",
-              " 161037.50096749226,\n",
-              " 161023.923374613]"
+              "50"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 129
+          "execution_count": 140
         }
       ]
     },
@@ -2842,27 +2793,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 180
         },
-        "outputId": "5d048392-5d56-4dbf-9aed-98d1175e2860"
+        "outputId": "0ef74d87-5b19-49d4-cbb4-86cb51e65991"
       },
       "source": [
         "import seaborn as sns\n",
-        "sns.scatterplot(range(1, X_train_enc.shape[1]+1), mae_list)"
+        "sns.scatterplot(range(1, len(mae_list)[1]+1), mae_list);"
       ],
-      "execution_count": 135,
+      "execution_count": 143,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f250a965518>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 135
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-143-178ea55ffdf0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0msns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscatterplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmae_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmae_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+          ]
         }
       ]
     },
