--- a/module4-logistic-regression/LS_DS_214.ipynb
+++ b/module4-logistic-regression/LS_DS_214.ipynb
@@ -1899,6 +1899,91 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QJQnoMQ6_Ajb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "6536a73b-d61f-4ed2-f296-07753f917441"
+      },
+      "source": [
+        "X_test = test[features]\n",
+        "X_test_enc = encoder.transform(X_test)\n",
+        "X_test_imp = imputer.transform(X_test_enc)\n",
+        "X_test_scaled = scalar.transform(X_test_imp)\n",
+        "X_test_scaled"
+      ],
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.83012938,  0.72705166, -0.72705166, ..., -0.45841567,\n",
+              "         3.1832897 , -0.05479966],\n",
+              "       [ 0.83012938, -1.37541808,  1.37541808, ..., -0.45841567,\n",
+              "        -0.31414043, -0.05479966],\n",
+              "       [-0.36497068,  0.72705166, -0.72705166, ..., -0.45841567,\n",
+              "         3.1832897 , -0.05479966],\n",
+              "       ...,\n",
+              "       [ 0.83012938,  0.72705166, -0.72705166, ..., -0.45841567,\n",
+              "        -0.31414043, -0.05479966],\n",
+              "       [ 0.83012938,  0.72705166, -0.72705166, ..., -0.45841567,\n",
+              "        -0.31414043, -0.05479966],\n",
+              "       [ 0.83012938,  0.72705166, -0.72705166, ...,  2.1814263 ,\n",
+              "        -0.31414043, -0.05479966]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WIKqlvQN_Zim",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "submission = test[['PassengerId']].copy()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o3wtt808_n7N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "submission['Survived'] = y_pred"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HL82kzUX_uG1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "submission.to_csv(\"my_submission.csv\", index=False)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "jXrAi2cOeMiT",
